2013-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.17

2013-08-08  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-parser.c (parser_content_type): If no Content-Type
	header exists and the parent is a multipart/digest, default to
	message/rfc822 instead of text/plain.
	(parser_construct_leaf_part): If the Content-Type header didn't
	exist, use the default content-type values instead of assuming
	text/plain.

2013-08-07  Jeffrey Stedfast  <fejj@gnome.org>

	According to Rfc2046 Section 5.1.1, boundary markers may optionally
	be followed by lwsp.

	* gmime/gmime-parser.c (is_boundary): New convenience function to
	check that the text matches a boundary, possibly followed by lwsp.
	(check_boundary): Use is_boundary().
	(found_immediate_boundary): Use is_boundary().

	Fixes bug #705612

2013-07-02  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-stream-cat.c (stream_substream): Fixed to properly
	handle a 0-byte substream at the end of the very last source
	stream. Fixes bug #701572.

2013-06-30  Jeffrey Stedfast  <fejj@gnome.org>

	* README: Bumped version

	* configure.ac: Bumped version to 2.6.16

2013-06-30  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-gpg-context.c (gpg_ctx_set_mode):
	GPG_CTX_MODE_SIGN_ENCRYPT also requires a passphrase.

2013-05-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-filter-best.c (filter_filter): Reset the linelen
	state to 0 when we encounter a '\n'.

2013-05-04  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-part-iter.c: Modified to work for non-multipart
	messages.

2013-05-04  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (rfc2047_encode): Respect the new
	GMIME_ENABLE_USE_ONLY_USER_CHARSETS initialization flag.

	* gmime/gmime.h: Define a new GMIME_ENABLE_USE_ONLY_USER_CHARSETS
	initialization flag.

2013-04-05  Jeffrey Stedfast  <fejj@gnome.org>

	* gmime/gmime-utils.c (header_fold_tokens): New internal function